--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <p>Test</p>
+    <div id="main">
+        <h1>Объявление</h1>
+        <button id="create_ad">Создать объявление</button>
+    </div>
+    <form id="form">
+        <input type="text" placeholder="id ad" id="id_ad">
+        <input type="text" placeholder="Цена" id="price">
+        <input type="text" placeholder="Валюта" id="currency">
+        <button id="123">Не понял</button>
+    </form>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
