--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Title</title>
 </head>
+
 <body>
-    <div id="main">
-        <h1>Объявление</h1>
-        <p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-        <button id="create_ad">Создать объявление</button>
-    </div>
-    <form id="form">
-        <input type="text" placeholder="id ad" id="id_ad">
-        <input type="text" placeholder="Цена" id="price">
-        <input type="text" placeholder="Валюта" id="currency">
-        <button id="123">Не понял</button>
-    </form>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
+	<div id="main">
+		<h1>Объявление</h1>
+		<p>AAAAAAAAAAA</p>
+	<button id="test">тест</button>
+	</div>
+	<form id="form">
+		<input type="text" placeholder="id ad" id="id_ad">
+		<input type="text" placeholder="Цена" id="price">
+		<input type="text" placeholder="Валюта" id="currency">
+		<button id="create_ad">Создать объявление</button>
+	</form>
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+	<script>
+		let tg = window.Telegram.WebApp
+    let create_ad = document.getElementById("create_ad")
+
+    test.addEventListner("click", () => {
+      document.getElementById(id_ad).value = tg.initDataUnsafe.first_name
+    })
+    create_ad.addEventListner("click", () => {
+      tg.close();
+    })
+	</script>
 </body>
+
 </html>
