--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script>
 		let tg = window.Telegram.WebApp
+    let test = document.getElementById("test")
     let create_ad = document.getElementById("create_ad")
 
-    test.addEventListner("click", () => {
-      document.getElementById(id_ad).value = tg.initDataUnsafe.user.first_name
+    test.addEventListener("click", () => {
+      document.getElementById("id_ad").value = tg.initDataUnsafe.user.first_name
     })
-    create_ad.addEventListner("click", () => {
+    create_ad.addEventListener("click", () => {
       tg.close();
     })
 	</script>
