--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     let create_ad = document.getElementById("create_ad")
 
     test.addEventListener("click", () => {
-      document.getElementById("id_ad").value = "aaaa" + tg.initDataUnsafe.user.first_name + "bbbb"
+      document.getElementById("id_ad").value = "kjdshfjsdhfkjdshfjsdh"
     })
     create_ad.addEventListener("click", () => {
       tg.close();
