--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="main">
 		<h1>Объявление</h1>
 		<p>AAAAAAAAAAA</p>
-	<button id="test">тест</button>
+	<button type="button" id="test">тест</button>
 	</div>
 	<form id="form">
 		<input type="text" placeholder="id ad" id="id_ad">
