--- a/index.html
+++ b/index.html
@@ -22,16 +22,12 @@
 	</form>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script>
-		let tg = window.Telegram.WebApp
-    let test = document.getElementById("test")
-    let create_ad = document.getElementById("create_ad")
-
-    test.addEventListener("click", () => {
-      document.getElementById("id_ad").value = "kjdshfjsdhfkjdshfjsdh"
-    })
-    create_ad.addEventListener("click", () => {
-      tg.close();
-    })
+		test.addEventListener("click", () => {
+		  document.getElementById("id_ad").value = "kjdshfjsdhfkjdshfjsdh";
+		})
+		create_ad.addEventListener("click", () => {
+		  tg.close();
+		})
 	</script>
 </body>
 
