--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 	</form>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script>
+		let tg = window.Telegram.WabApp;
+		let test = document.getElementById("test")
+		tg.expand();
+
 		test.addEventListener("click", () => {
 		  document.getElementById("id_ad").value = "kjdshfjsdhfkjdshfjsdh";
 		})
