--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		tg.expand();
 
 		test.addEventListener("click", () => {
-		  document.getElementById("id_ad").value = tg.initDataUnsafe.user.name;
+		  document.getElementById("id_ad").value = "sdf" + tg.initDataUnsafe.user.first_name;
 		})
 		create_ad.addEventListener("click", () => {
 		  tg.close();
