--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<button id="create_ad">Создать объявление</button>
 	</form>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 	<script>
 		let tg = window.Telegram.WabApp;
 		let test = document.getElementById("test")
@@ -32,6 +33,8 @@
 		  tg.close();
 		})
 	</script>
+	<script>var newvar =tg.initDataUnsafe.user.name;</script>
+	<button onclick="alert(newvar)">Выведи переменную на экран</button>
 </body>
 
 </html>
