--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  tg.close();
 		})
 	</script>
-	<script>var newvar =tg.initDataUnsafe.user.first_name;</script>
+	<script>var newvar =tg.initDataUnsafe.query_id;</script>
 	<button onclick="alert(newvar)">Выведи переменную на экран</button>
 </body>
 
