--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		create_ad.addEventListener("click", () => {
 			tg.close();
 		})
-		let newvar = tg.initDataUnsafe.query_id;
+		var newvar = tg.initDataUnsafe.query_id;
 	</script>
 	<button onclick="alert(newvar)">Выведи переменную на экран</button>
 
