--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script>
-		let tg = window.Telegram.WabApp;
+		let tg = window.Telegram.WebApp;
 		let test = document.getElementById("test")
 		let create_ad = document.getElementById("create_ad")
 
 		test.addEventListener("click", () => {
 			document.getElementById("form").style.display = "block";
-			document.getElementById("id_ad").value = "kjdfkjdshfjkdsh";
+			document.getElementById("id_ad").value = tg.initDataUnsafe.user.first_name;
 		})
 		create_ad.addEventListener("click", () => {
 			tg.close();
