--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
 		test.addEventListener("click", () => {
 			document.getElementById("form").style.display = "block";
-			document.getElementById("id_ad").value = tg.initDataUnsafe.user.first_name;
+			document.getElementById("id_ad").value = tg.initDataUnsafe.user.name;
 		})
 		create_ad.addEventListener("click", () => {
 			tg.close();
 		})
-		var newvar = tg.initDataUnsafe.query_id;
+		var newvar = tg.initDataUnsafe.user.name;
 	</script>
 	<button onclick="alert(newvar)">Выведи переменную на экран</button>
 
