--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 		let tg = window.Telegram.WebApp;
 		let test = document.getElementById("test");
 		let create_ad = document.getElementById("create_ad");
-		tg.expand();
+		var newvar = tg.initDataUnsafe.user.first_name;
 
 		test.addEventListener("click", () => {
 			document.getElementById("form").style.display = "block";
-			document.getElementById("id_ad").value = tg.initDataUnsafe.user.first_name;
-		})
+			document.getElementById("price").value = tg.initDataUnsafe.user.first_name;
+		});
 		create_ad.addEventListener("click", () => {
 			tg.close();
-		})
-		var newvar = tg.initDataUnsafe.user.first_name;
+		});
+
 	</script>
 	<button onclick="alert(newvar)">Выведи переменную на экран</button>
 
