--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		let tg = window.Telegram.WebApp;
 		let test = document.getElementById("test");
 		let create_ad = document.getElementById("create_ad");
-		var newvar = tg.initDataUnsafe.user.first_name;
+		var newvar = tg.initData;
 
 		test.addEventListener("click", () => {
 			document.getElementById("form").style.display = "block";
@@ -38,7 +38,7 @@
 		});
 
 	</script>
-	<button onclick="alert(newvar)">Выведи переменную на экран</button>
+	<button onclick="alert(newvar)">aaaaa</button>
 
 </body>
 
