--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		});
 
 	</script>
-	<button onclick="console.log(tg.initDataUnsafe)">show</button>
+	<button onclick="console.log(tg.initDataUnsafe)">showe</button>
 
 </body>
 
