--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				id: id_ad
 			};
 			tg.sendData(JSON.stringify(data));
-			alert(JSON.stringify((data)))
+			alert(JSON.stringify((data)));
 		});
 
 	</script>
-	<button onclick="console.log(tg.initData)">show</button>
+	<button onclick="console.log(tg.initData)">showe</button>
 
 </body>
 
