--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		});
 
 	</script>
-	<button onclick="console.log(tg.initData)">showe</button>
+	<button onclick="alert(JSON.stringify((data)));">show</button>
 
 </body>
 
