--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 			let data = {
 				id: id_ad
 			};
-			tg.sendData(JSON.stringify(data));
+
 			alert(JSON.stringify((data)));
 		});
 
 	</script>
-	<button onclick="alert(JSON.stringify((data)));">show</button>
+	<button onclick="alert(JSON.stringify((data)));">showe</button>
 
 </body>
 
