--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<input type="text" placeholder="id ad" id="id_ad" class="form__item">
 					<input type="text" placeholder="Цена" id="price" class="form__item">
 					<input type="text" placeholder="Валюта" id="currency" class="form__item">
-					<button id="create_ad">Создать объявление</button>
+					<button type="button" id="create_ad">Создать объявление</button>
 				</form>
 			</div>
 		</div>
