--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				query_id: tg.initDataUnsafe.query_id
 			};
 
-			console.log(JSON.stringify((data)));
+			console.log(tg.initDataUnsafe);
 		});
 
 	</script>
